--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcc 'DB'
 - !lcc 'PZ'
 - !lcsh 'Children -- Hungary -- Juvenile literature'
+- GITenberg
 title: Our Little Hungarian Cousin
 url: http://www.gutenberg.org/ebooks/43371
